--- a/bestshop-registry-service.yml
+++ b/bestshop-registry-service.yml
@@ -1,3 +1,9 @@
-security:
-  basic:
-    enabled: false
+server:
+  port: 8761
+
+eureka:
+  instance:
+    lease-expiration-duration-in-seconds: 10
+  client:
+    fetch-registry: false
+    register-with-eureka: false
