Add stream rabbit support

--- a/application.yml
+++ b/application.yml
@@ -27,6 +27,9 @@ logging:
     level.org.springframework: 'INFO'
 
 spring:
+  rabbitmq:
+    host: localhost
+
   jackson:
     default-property-inclusion: non_null
     serialization:
